--- a/Wire-iOS.xcodeproj/xcshareddata/xcschemes/Wire-iOS.xcscheme
+++ b/Wire-iOS.xcodeproj/xcshareddata/xcschemes/Wire-iOS.xcscheme
@@ -43,6 +43,9 @@
             reference = "container:Wire-iOS.xctestplan"
             default = "YES">
          </TestPlanReference>
+         <TestPlanReference
+            reference = "container:testOpaqueImage.xctestplan">
+         </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
