separate testSoundCloudSetMediaPreviewAttachment, but ConversationTextMessageTests still crash when all tests done

--- a/Wire-iOS.xcodeproj/xcshareddata/xcschemes/Wire-iOS.xcscheme
+++ b/Wire-iOS.xcodeproj/xcshareddata/xcschemes/Wire-iOS.xcscheme
@@ -55,6 +55,9 @@
          <TestPlanReference
             reference = "container:Testplan/testSoundCloudMediaPreviewAttachment.xctestplan">
          </TestPlanReference>
+         <TestPlanReference
+            reference = "container:Testplan/testSoundCloudSetMediaPreviewAttachment.xctestplan">
+         </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
